translation auth fix

--- a/.env
+++ b/.env
@@ -73,12 +73,18 @@ FILE_SERVICE_URL=http://file-service:8006
 # Embedding service
 EMBEDDING_SERVICE_URL=http://embedding-service:8007
 
+# Translation service
+TRANSLATION_SERVICE_URL=http://translation-service:8008
+
 # ===========================================
 # SERVICE AUTHENTICATION
 # ===========================================
 
 # Database service authentication token - CHANGE THIS IN PRODUCTION
 DATABASE_SERVICE_TOKEN=db-service-secret-token
+
+# Translation service authentication token - CHANGE THIS IN PRODUCTION
+TRANSLATION_SERVICE_TOKEN=translation-service-secret-token
 
 # ===========================================
 # CORS SETTINGS
@@ -139,6 +145,7 @@ DATABASE_SERVICE_PORT=8004
 ADMIN_SERVICE_PORT=8005
 FILE_SERVICE_PORT=8006
 EMBEDDING_SERVICE_PORT=8007
+TRANSLATION_SERVICE_PORT=8008
 
 # ===========================================
 # OPENAI CONFIGURATION
