--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -63,6 +63,10 @@ http {
         server rag-embedding-service:8007;
     }
 
+    upstream ocr_service {
+        server ocr-service:8008;
+    }
+
     # Main server block
     server {
         listen 80;
@@ -282,6 +286,42 @@ http {
         # WebSocket for embedding progress
         location /ws/embedding/ {
             proxy_pass http://rag_embedding_service/ws/embedding/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket timeouts
+            proxy_read_timeout 86400s;
+            proxy_send_timeout 86400s;
+        }
+
+        # OCR service routes
+        location /api/ocr/ {
+            proxy_pass http://ocr_service/api/ocr/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+            
+            # Increase timeout for OCR processing
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 300s;
+            
+            # Increase buffer sizes for file uploads
+            client_max_body_size 50M;
+            proxy_buffers 16 16k;
+            proxy_buffer_size 32k;
+        }
+        
+        # WebSocket for OCR progress
+        location /ws/ocr/ {
+            proxy_pass http://ocr_service/ws/ocr/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
