--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -213,6 +213,8 @@ services:
       - OCR_MAX_CONCURRENT_JOBS=${OCR_MAX_CONCURRENT_JOBS:-3}
       - OCR_JOB_TIMEOUT=${OCR_JOB_TIMEOUT:-300}
       - OCR_CLEANUP_DELAY=${OCR_CLEANUP_DELAY:-60}
+      - OCR_PDF_DPI=${OCR_PDF_DPI:-400}
+      - OCR_PDF_FORMAT=${OCR_PDF_FORMAT:-PNG}
     depends_on:
       - database-service
       - redis
