--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -144,6 +144,14 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
+        # handles the web page traffic for the patient dashboard.
+        location /patient/dashboard/ {
+            proxy_pass http://patient_service;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
         # Clinician service routes
         location /api/clinicians/ {
             proxy_pass http://clinician_service;
@@ -248,6 +256,15 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header Authorization $http_authorization;
+        }
+
+        # WebSocket for translation service.
+        location /ws/translations/ {
+            proxy_pass http://patient_service;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
         }
 
         # Health check endpoints
