--- a/patient-service/requirements.txt
+++ b/patient-service/requirements.txt
@@ -1,6 +1,9 @@
 Django==5.2.4
 djangorestframework==3.15.2
 django-cors-headers==4.6.0
+channels==4.3.1
+channels-redis==4.3.0
+daphne==4.2.1
 PyJWT==2.10.1
 requests==2.32.4
 gunicorn==23.0.0
