--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -66,6 +66,10 @@ http {
     upstream ocr_service {
         server ocr-service:8008;
     }
+    
+    upstream suggestion_service {
+        server suggestion-service:8009;
+    }
 
     # Main server block
     server {
@@ -85,6 +89,16 @@ http {
         # Root location - redirect to login
         location = / {
             return 301 /login;
+        }
+
+        # Suggestion service routes
+        location ^~ /api/suggest/ {
+            proxy_pass http://suggestion_service/suggest;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
         }
 
         # Auth service routes
@@ -462,6 +476,7 @@ http {
             
             expires 1h;
         }
+
 
         # Default location for other unmatched paths (must be last)
         location / {
