files updated after merge

--- a/.env
+++ b/.env
@@ -73,8 +73,11 @@ FILE_SERVICE_URL=http://file-service:8006
 # RAG Embedding service
 RAG_SERVICE_URL=http://rag-embedding-service:8007
 
+# OCR service
+OCR_SERVICE_URL=http://ocr-service:8008
+
 # Translation service
-TRANSLATION_SERVICE_URL=http://translation-service:8008
+TRANSLATION_SERVICE_URL=http://translation-service:8009
 
 # ===========================================
 # SERVICE AUTHENTICATION
@@ -82,9 +85,6 @@ TRANSLATION_SERVICE_URL=http://translation-service:8008
 
 # Database service authentication token - CHANGE THIS IN PRODUCTION
 DATABASE_SERVICE_TOKEN=db-service-secret-token
-
-# Translation service authentication token - CHANGE THIS IN PRODUCTION
-TRANSLATION_SERVICE_TOKEN=translation-service-secret-token
 
 # ===========================================
 # CORS SETTINGS
@@ -145,8 +145,7 @@ DATABASE_SERVICE_PORT=8004
 ADMIN_SERVICE_PORT=8005
 FILE_SERVICE_PORT=8006
 RAG_SERVICE_PORT=8007
-TRANSLATION_SERVICE_PORT=8008
-
+TRANSLATION_SERVICE_PORT=8009
 # ===========================================
 # OPENAI CONFIGURATION
 # ===========================================
