env file updated

--- a/.env
+++ b/.env
@@ -86,6 +86,9 @@ TRANSLATION_SERVICE_URL=http://translation-service:8009
 # Database service authentication token - CHANGE THIS IN PRODUCTION
 DATABASE_SERVICE_TOKEN=db-service-secret-token
 
+# Translation service authentication token - CHANGE THIS IN PRODUCTION
+TRANSLATION_SERVICE_TOKEN=translation-service-secret-token
+
 # ===========================================
 # CORS SETTINGS
 # ===========================================
