--- a/.env
+++ b/.env
@@ -77,7 +77,7 @@ RAG_SERVICE_URL=http://rag-embedding-service:8007
 OCR_SERVICE_URL=http://ocr-service:8008
 
 # Translation service
-TRANSLATION_SERVICE_URL=http://translation-service:8009
+TRANSLATION_SERVICE_URL=http://translation-service:8010
 
 # ===========================================
 # SERVICE AUTHENTICATION
@@ -151,8 +151,7 @@ TRANSLATION_SERVICE_PORT=8009
 # ===========================================
 
 # OpenAI API Key - REQUIRED for RAG embeddings
-OPENAI_API_KEY=
-
+OPENAI_API_KEY=""
 # OpenAI Embedding Model
 OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 
