--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -72,7 +72,7 @@ http {
     }
 
     upstream translation_service {
-        server translation-service:8008;
+        server translation-service:8010;
     }
 
     # Main server block
@@ -377,6 +377,24 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Host $host;
+        }
+
+        location /api/translate {
+            proxy_pass http://translation_service/api/translate;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+        }
+
+        location ~ ^/api/result/(.+)$ {
+            proxy_pass http://translation_service/api/result/$1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
         }
 
         # Health check endpoints
