--- a/.env
+++ b/.env
@@ -154,7 +154,7 @@ TRANSLATION_SERVICE_PORT=8010
 # ===========================================
 
 # OpenAI API Key - REQUIRED for RAG embeddings
-OPENAI_API_KEY=""
+OPENAI_API_KEY=
 # OpenAI Embedding Model
 OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 
